k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-demo-service
  labels:
    app: release-demo-service
    component: api
spec:
  type: ClusterIP
  selector:
    app: release-demo-service
    component: api
    track: stable
  ports:
    - name: http
      port: 80
      targetPort: 8000
